# picodroid

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  ROADMAP.md
apps/blinky/: BUILD.bazel  main.cc
modules/blinky/: BUILD.bazel  blinky.cc  blinky.h  blinky_test.cc  service.cc  service.h
src/framework/main/: BUILD.bazel  main.cc
system/: BUILD.bazel  system.h
targets/host/: led.cc  system.cc
targets/rp2/: BUILD.bazel  binary.bzl  led.cc  system.cc  unit_test_rpc_main.cc
tools/: BUILD.bazel
